openshift/moldavite.yaml
---
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: moldavite
spec:
  test: false
  replicas: 1
  selector:
    app.kubernetes.io/component: moldavite
    app.kubernetes.io/managed-by: aicoe-thoth-devops
    app.kubernetes.io/name: thoth
    service: moldavite
  template:
    metadata:
      labels:
        app.kubernetes.io/component: moldavite
        app.kubernetes.io/managed-by: aicoe-thoth-devops
        app.kubernetes.io/name: thoth
        service: moldavite
    spec:
      serviceAccountName: moldavite
      containers:
        - name: moldavite
          image: moldavite:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              memory: "500Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          readinessProbe:
            httpGet:
              path: "/readiness"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: "/liveness"
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 60
            timeoutSeconds: 10
