openshift/moldavite-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: thoth
    component: moldavite
  name: moldavite
spec:
  ports:
    - name: metrics
      protocol: TCP
      port: 80
      targetPort: 8080
  selector:
    service: moldavite
    app.kubernetes.io/name: thoth
    app.kubernetes.io/component: moldavite
    app.kubernetes.io/managed-by: aicoe-thoth-devops
