openshift/moldavite-route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: moldavite
spec:
  to:
    kind: Service
    name: moldavite
